update website content

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-router-dom": "^7.9.3",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -42,7 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "react-scripts": "^5.0.1"
   }
 }
-
